# EpochFrame

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  debug_test.cpp  docker-compose.yml  ecs_task_definition.json  test_drop_null_manual.cpp  test_duckdb_concat_merge.cpp  test_duckdb_merge.cpp  test_extension_conversion.cpp  test_extension_types.cpp  test_groupby_duckdb.cpp  vcpkg.json
benchmark/: CMakeLists.txt  Makefile  README.md  TODO.md  benchmark_dataframe.cpp  benchmark_main.cpp  benchmark_series.cpp  benchmark_string_ops.cpp  compare_benchmarks.py  epoch_benchmark.cpp  pandas_benchmark.py  simple_benchmark.cpp
benchmark/benchmark_venv/: pyvenv.cfg
benchmark/comparison_result/: comparison_data.json  comparison_report.md  recommendations.md
benchmark/cpp_result/: benchmark_manifest.json  benchmark_results.json  benchmark_summary.txt
benchmark/python_result/: benchmark_manifest.json  benchmark_results.json  benchmark_summary.txt
benchmark/sql_benchmark/: CMakeLists.txt  README.md  benchmark_writer.h  sql_benchmark.cpp
benchmark/sql_benchmark/baselines/: sql_query_baseline.json
examples/: CMakeLists.txt  arrow_serialization_example.cpp  getting_started.cpp  time_series_analysis.cpp
src/: CMakeLists.txt
src/aggregators/: CMakeLists.txt  arrow_agg.cpp  arrow_agg.h
src/calendar/: CMakeLists.txt  calendar_common.h  calendar_factory.cpp  calendar_factory.h  calendar_utils.cpp  calendar_utils.h  class_registry.h  date_offsets.cpp  date_offsets.h  datetime.cpp  datetime.h  day_of_week.h  market_calendar.cpp  market_calendar.h  relative_delta.cpp  relative_delta_options.h  time_delta.cpp  time_delta.h
src/calendar/business/: CMakeLists.txt  np_busdaycal.cpp  np_busdaycal.h
src/calendar/business_calendar/: np_busdaycal.cpp  np_busdaycal.h
src/calendar/calendars/: CMakeLists.txt  all.h  cboe.cpp  cme.cpp  cme_globex.cpp  crypto.cpp  fx.cpp  ice.cpp  (+3 more)
src/common/: CMakeLists.txt  arrow_agg.cpp  arrow_agg.h  arrow_compute_utils.cpp  arrow_compute_utils.h  asserts.cpp  asserts.h  concatenator.cpp  concatenator.h  epoch_thread_pool.h  exceptions.h  frame_or_series.h  indexer.h  integer_slice.cpp  methods_helper.cpp  methods_helper.cpp.backup  methods_helper.h  python_utils.h  s3_manager.h  serialization.cpp  series_or_scalar.h  table_or_array.h  user_defined_compute_functions.cpp  user_defined_compute_functions.h
src/common_utils/: arrow_compute_utils.cpp  arrow_compute_utils.h  asserts.cpp  asserts.h  enums.h  exceptions.h
src/date_offsets/: date_offsets.cpp  date_offsets.h
src/date_time/: CMakeLists.txt  date_offsets.cpp  date_offsets.h  datetime.cpp  datetime.h  day_of_week.h  relative_delta.cpp  relative_delta.h  relative_delta_options.h  time_delta.cpp  time_delta.h
src/datetime/: datetime_array.cpp  datetime_array.h
src/duckdb/: CMakeLists.txt  c_api_connection.cpp  c_api_connection.h  sql_engine.cpp  sql_engine.h
src/factory/: CMakeLists.txt  array_factory.cpp  array_factory.h  dataframe_factory.cpp  dataframe_factory.h  date_offset_factory.cpp  date_offset_factory.h  index_factory.cpp  index_factory.h  scalar_factory.cpp  scalar_factory.h  series_factory.cpp  series_factory.h  table_factory.cpp  table_factory.h
src/index/: CMakeLists.txt  arrow_index.cpp  arrow_index.h  datetime_index.cpp  datetime_index.h  index.h  object_index.cpp  object_index.h  range_index.cpp  range_index.h  string_index.cpp  string_index.h  struct_index.cpp  struct_index.h
src/methods/: CMakeLists.txt  agg.cpp  agg.h  arith.cpp  arith.h  common_op.cpp  common_op.h  compare.cpp  compare.h  groupby.cpp  groupby.h  method_base.cpp  method_base.h  methods_helper.cpp  methods_helper.h  resample.cpp  resample.h  select.cpp  select.h  string.cpp  string.h  struct_op.cpp  struct_op.h  temporal.cpp  temporal.h  time_grouper.cpp  time_grouper.h  window.cpp  window.h  window_op.cpp  window_op.h
src/ndframe/: CMakeLists.txt  array.cpp  dataframe.cpp  ndframe.cpp  ndframe.h  scalar.cpp  series.cpp
src/serialization/: serialization.cpp
src/test/: CMakeLists.txt
src/udf/: register_scalar_agg.cpp  register_scalar_agg.h
src/vector_functions/: CMakeLists.txt  arrow_vector_functions.cpp  arrow_vector_functions.h
src/visitors/: CMakeLists.txt  search_sorted.cpp  search_sorted.h
test/: CMakeLists.txt  catch_main.cpp  common_utils_test.cpp  integer_slice_test.cpp  test_bool_extension.cpp  test_main.cpp
test/calendar/: CMakeLists.txt  catch_main.cpp  cboe_calendar_test.cpp  cme_agriculture_calendar_test.cpp  cme_bond_calendar_test.cpp  cme_equity_calendar_test.cpp  cme_globex_crypto_calendar_test.cpp  cme_globex_energy_and_metals_calendar_test.cpp  cme_globex_equities_calendar_test.cpp  cme_globex_fixed_income_calendar_test.cpp  cme_globex_fx_calendar_test.cpp  cme_globex_grains_calendar_test.cpp  crypto_calendar_test.cpp  date_offsets_test.cpp  day_of_week_test.cpp  fx_calendar_test.cpp  holiday_test.cpp  ice_calendar_test.cpp  market_calendar_test.cpp  nyse_calendar_test.cpp  relative_delta_offset_test.cpp  relative_delta_test.cpp  time_delta_test.cpp  utils_test.cpp
test/dataframe/: CMakeLists.txt  array_test.cpp  df_test.cpp  scalar_test.cpp  serialization_test.cpp  series_test.cpp
test/date_offsets/: date_offsets_test.cpp
test/date_time/: CMakeLists.txt  bmonth_test.cpp  business_offset_test.cpp  date_offsets_test.cpp  day_of_week_test.cpp  month_test.cpp  np_busday_test.cpp  relative_delta_offset_test.cpp  relative_delta_test.cpp  semi_month_test.cpp  session_anchor_offset_test.cpp  time_delta_test.cpp  week_test.cpp
test/duckdb/: CMakeLists.txt  test_sql_query.cpp  test_sql_thread_safety.cpp
test/factory/: CMakeLists.txt  index_factory_test.cpp  object_index_factory_test.cpp
test/index/: CMakeLists.txt  arrow_index_test.cpp
test/methods/: CMakeLists.txt
test/ndframe/: df_test.cpp  series_test.cpp
test/test_files/: EURUSD_15min_label-left_closed-right_origin-end_day.csv  EURUSD_15min_label-right_closed-left_origin-default.csv  EURUSD_15min_label-right_closed-right_origin-start_day.csv  generate_resample_date.py
(+181 files in other folders)
